feat(condo): Add interactive property map (#5861)
* feat(condo): add tooltip on building map screen

* chore(condo): add map:hover tooltip

* chore(condo): add modal window

* fix(condo): fix on linter comments

* fix(condo): make it feature complete && remove PropertyReportCard

* fix(condo): remove console.logs

* fix(condo): fixes on self-review

--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -11,6 +11,7 @@
   "AddItemUsingFileUpload": "Mediante carga de archivo",
   "AddItemUsingForm": "A través de formulario",
   "And": "y",
+  "AndOthers": "y otros",
   "AnotherContextAlreadyCreated": "Ya tienes otra integración conectada. Para cambiar la actual, ponte en contacto con el soporte técnico de «{company}»",
   "ApplyChanges": "Guardar cambios",
   "AreYouSure": "¿Estás seguro? ",
@@ -752,7 +753,7 @@
   "employee.reassignTickets.title": "¿A quién asignar los tickets del empleado?",
   "employee.role.Administrator.description": "El administrador tiene acceso total a los datos y funciones de Doma: puede borrar, crear o editar cualquier cosa. Los administradores controlan las organizaciones creadas: una organización puede tener un número ilimitado de empleados con este tipo de acceso.",
   "employee.role.Administrator.name": "Administrador",
-  "employee.role.Contractor.description": "Contratista realiza trabajos sobre incidencias asignadas. No tiene acceso a otras secciones y funcionalidades de la plataforma Doma.ai.",
+  "employee.role.Contractor.description": "Contratista realiza trabajos sobre incidencias asignadas. No tiene acceso a otras secciones y funcionalidades de la plataforma.",
   "employee.role.Contractor.name": "Contratista",
   "employee.role.Dispatcher.description": "Los despachadores interactúan con el cliente y los servicios internos del administrador: crean incidencias, dejan comentarios, cambian estados, transmiten lecturas de contadores y entregan llaves. Los despachadores tienen acceso a la información sobre clientes, cargos y personal técnico, pero no pueden editar, añadir o eliminar algo. Se puede restringir el acceso a una comunidad específica en ¨Ajustes¨, en ¨Permisos y accesos¨.",
   "employee.role.Dispatcher.name": "Despachador",
@@ -1531,8 +1532,8 @@
   "notification.messages.RECURRENT_PAYMENT_TOMORROW_PAYMENT_LIMIT_EXCEED_MESSAGE.push.title": "El pago automático no se realizará a través de ⚠️",
   "notification.messages.RECURRENT_PAYMENT_TOMORROW_PAYMENT_MESSAGE.push.title": "Es sólo un recordatorio 😉",
   "notification.messages.RECURRENT_PAYMENT_TOMORROW_PAYMENT_NO_RECEIPTS_MESSAGE.push.title": "Es sólo un recordatorio 😉",
-  "notification.messages.REGISTER_NEW_USER.email.subject": "Sus datos para acceder al servicio Doma.ai",
-  "notification.messages.REGISTER_NEW_USER.push.title": "Sus datos para acceder al servicio Doma.ai",
+  "notification.messages.REGISTER_NEW_USER.email.subject": "Sus datos para acceder al servicio",
+  "notification.messages.REGISTER_NEW_USER.push.title": "Sus datos para acceder al servicio",
   "notification.messages.RESIDENT_ADD_BILLING_ACCOUNT.email.subject": "Añada una cuenta personal",
   "notification.messages.RESIDENT_ADD_BILLING_ACCOUNT.push.title": "Añada una cuenta personal",
   "notification.messages.RESIDENT_UPGRADE_APP.email.subject": "Es hora de actualizar",
@@ -2280,6 +2281,7 @@
   "pages.condo.property.id.propertyReportDescription": "Los clientes de Verde pueden configurar y enviar a los vecinos un informe claro y detallado. Incluye cifras importantes sobre los gastos e ingresos de la comunidad.",
   "pages.condo.property.id.propertyReportTitle": "Informe de comunidad",
   "pages.condo.property.id.setupReportTitle": "Configurar informe",
+  "pages.condo.property.id.ticketInformationTitle": "Solicitudes del condominio",
   "pages.condo.property.index.Buildings.Tab.Title": "Comunidades",
   "pages.condo.property.index.CreatePropertyButtonLabel": "Añadir comunidad",
   "pages.condo.property.index.CreatePropertyModalTitle": "Crear",
@@ -2296,6 +2298,13 @@
   "pages.condo.property.index.TableField.UninhabitedUnitsCount": "Unidades no residenciales",
   "pages.condo.property.index.TableField.UnitsCount": "Pisos",
   "pages.condo.property.index.UpdatePropertyTitle": "Editar comunidad",
+  "pages.condo.property.map.modal.errorLoadingContacts": "No se pudo cargar a los residentes",
+  "pages.condo.property.map.modal.goToContacts": "Ir a los contactos",
+  "pages.condo.property.map.modal.noContacts": "A este inmueble aún no se han añadido residentes en la plataforma",
+  "pages.condo.property.map.modal.noContacts.emptyView.subtitle": "¿Añadimos el primero ahora mismo?",
+  "pages.condo.property.map.modal.noContacts.emptyView.title": "Todavía no hay residentes en esta unidad",
+  "pages.condo.property.map.modal.title": "Detalles de la unidad",
+  "pages.condo.property.map.modal.totalContacts": "Residentes registrados",
   "pages.condo.property.menu.MenuPlaceholder": "Añadir elemento",
   "pages.condo.property.modal.RenameNextParking": "Cambiar números de aparcamientos siguientes",
   "pages.condo.property.modal.RenameNextParkingUnits": "Cambiar números de plazas de coches siguientes",
@@ -3019,7 +3028,7 @@
   "timezone.msk": "Hora de Moscú",
   "tour.cardVideo.description.billing": "Le contamos cómo trabajar con los cargos y asegurarnos de que los vecinos paguen sus facturas a tiempo",
   "tour.cardVideo.description.default": "Le contamos cómo Doma ayuda a las organizaciones gestoras",
-  "tour.cardVideo.description.meter": "Contamos cómo las organizaciones de gestión y vecinos pueden trabajar con las lecturas de contadores en la plataforma Doma.ai y en la aplicación móvil",
+  "tour.cardVideo.description.meter": "Contamos cómo las organizaciones de gestión y vecinos pueden trabajar con las lecturas de contadores en la plataforma y en la aplicación móvil",
   "tour.cardVideo.description.resident": "Contamos cómo la aplicación móvil Doma ayuda a las organizaciones de gestión. Usando ejemplos de la práctica, mostramos cómo implementarla.",
   "tour.cardVideo.description.ticket": "Le contamos cómo vecinos pueden dejar incidencias y las organizaciones de gestión pueden recibirlas y tramitarlas",
   "tour.cardVideo.title.billing": "Cómo Doma ayuda a reducir las cuentas por cobrar",
@@ -3047,7 +3056,7 @@
   "tour.completedStepModal.createMeterReadings.subtitle": "Podrá subir más lecturas",
   "tour.completedStepModal.createMeterReadings.subtitleLinkLabel": "en la sección ¨Dispositivos de medición¨",
   "tour.completedStepModal.createMeterReadings.title": "Primeras lecturas cargadas",
-  "tour.completedStepModal.createProperty.bodyText.default": "Agregar comunidades a la plataforma Doma.ai es el primer paso para optimizar sus procesos comerciales. Eche un vistazo a la Guía creada por Doma: le ayudará con otras tareas.",
+  "tour.completedStepModal.createProperty.bodyText.default": "Agregar comunidades a la plataforma es el primer paso para optimizar sus procesos comerciales. Eche un vistazo a la Guía creada por Doma: le ayudará con otras tareas.",
   "tour.completedStepModal.createProperty.bodyText.meter": "El siguiente paso para simplificar el trabajo con las lecturas es dibujar un plano del edificio. Ayudará a obtener lecturas de pisos específicos. Para dibujar un plano del edificio, es necesario conocer el número de propiedades, plantas y portales de la comunidad.",
   "tour.completedStepModal.createProperty.bodyText.resident": "El siguiente paso para fortalecer la relación con los vecinos es dibujar un plano del edificio. Es necesario para que los vecinos de pisos concretos utilicen la aplicación. Para dibujar un plano del edificio es necesario conocer el número de propiedades, plantas y portales de la comunidad.",
   "tour.completedStepModal.createProperty.bodyText.ticket": "El siguiente paso para optimizar el trabajo con las incidencias es dibujar un plano del edificio. Ayudará a recibir incidencias de pisos específicos. Para dibujar un plano del edificio, es necesario conocer el número de propiedades, plantas y portales de la comunidad",
@@ -3069,7 +3078,7 @@
   "tour.completedStepModal.createPropertyMap.subtitle": "Puede añadir y editar planos",
   "tour.completedStepModal.createPropertyMap.subtitleLinkLabel": "en las páginas de DomaE",
   "tour.completedStepModal.createPropertyMap.title": "Plano creado",
-  "tour.completedStepModal.createTicket.bodyText.default": "Trabajar con incidencias en la plataforma Doma.ai le ayudará a optimizar sus procesos de gestión. Consulte la guía de Doma para obtener más ayuda.",
+  "tour.completedStepModal.createTicket.bodyText.default": "Trabajar con incidencias en la plataforma le ayudará a optimizar sus procesos de gestión. Consulte la guía de Doma para obtener más ayuda.",
   "tour.completedStepModal.createTicket.bodyText.ticket": "El último paso para optimizar el trabajo con incidencias es informar a los vecinos sobre la aplicación móvil Doma. Con su ayuda se puede reportar incidencias al administrador. Para facilitar la promoción de la aplicación entre los vecinos, hemos preparado una guía con plantillas ya preparadas",
   "tour.completedStepModal.createTicket.buttonLabel.default": "A la guía",
   "tour.completedStepModal.createTicket.buttonLabel.ticket": "Ver Guía",
