--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -11,6 +11,7 @@
   "AddItemUsingFileUpload": "Через загрузку файла",
   "AddItemUsingForm": "Через форму",
   "And": "и",
+  "AndOthers": "и другие",
   "AnotherContextAlreadyCreated": "У вас уже подключена другая интеграция, чтобы поменять текущую, обратитесь в тех. поддержку «{company}»",
   "ApplyChanges": "Сохранить изменения",
   "AreYouSure": "Вы уверены? ",
@@ -2266,7 +2267,7 @@
   "pages.condo.property.id.UnitsCount": "Жилых помещений",
   "pages.condo.property.id.UnknownMessage": "Неизвестно",
   "pages.condo.property.id.becomeSberClientTitle": "Стать клиентом Сбера",
-  "pages.condo.property.id.propertyInformationTitle": "О доме",
+  "pages.condo.property.id.propertyInformationTitle": "Общая информация",
   "pages.condo.property.id.propertyReport.chooseReportTitle": "Выберите отчет",
   "pages.condo.property.id.propertyReport.reportCardTitle.income": "Поступления по категориям",
   "pages.condo.property.id.propertyReport.reportCardTitle.withdrawal": "Расходы по категориям",
@@ -2280,6 +2281,7 @@
   "pages.condo.property.id.propertyReportDescription": "Клиенты Сбера могут настроить и отправить жителям понятный и подробный отчет. В нем — важные цифры о расходах и доходах дома.",
   "pages.condo.property.id.propertyReportTitle": "Отчет по дому",
   "pages.condo.property.id.setupReportTitle": "Настроить отчет",
+  "pages.condo.property.id.ticketInformationTitle": "Заявки по дому",
   "pages.condo.property.index.Buildings.Tab.Title": "Дома",
   "pages.condo.property.index.CreatePropertyButtonLabel": "Добавить дом",
   "pages.condo.property.index.CreatePropertyModalTitle": "Создать",
@@ -2296,6 +2298,13 @@
   "pages.condo.property.index.TableField.UninhabitedUnitsCount": "Нежилых помещений",
   "pages.condo.property.index.TableField.UnitsCount": "Квартир",
   "pages.condo.property.index.UpdatePropertyTitle": "Редактирование дома",
+  "pages.condo.property.map.modal.errorLoadingContacts": "Не удалось загрузить жителей",
+  "pages.condo.property.map.modal.goToContacts": "Перейти к контакту",
+  "pages.condo.property.map.modal.noContacts": "В это помещение жители пока не добавлены в платформе Doma.ai",
+  "pages.condo.property.map.modal.noContacts.emptyView.subtitle": "Добавим первого прямо сейчас?",
+  "pages.condo.property.map.modal.noContacts.emptyView.title": "Пока в этом помещении нет жителей",
+  "pages.condo.property.map.modal.title": "Подробности о помещении",
+  "pages.condo.property.map.modal.totalContacts": "Зарегистрировано жителей",
   "pages.condo.property.menu.MenuPlaceholder": "Добавить элемент",
   "pages.condo.property.modal.RenameNextParking": "Изменить номера следующих паркингов",
   "pages.condo.property.modal.RenameNextParkingUnits": "Изменить номера следующих машиномест",
