--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2872,6 +2872,13 @@
   "tasks.MeterReadingsImportTask.progress.description.preparing": "Preparing to import meter readings",
   "tasks.MeterReadingsImportTask.progress.description.processing": "Meter readings processed: {imported} of {total}",
   "tasks.MeterReadingsImportTask.progress.title": "Import meter readings",
+  "tasks.PropertyMeterReadingsImportTask.progress.description.completed": "File has been created, please refresh the page",
+  "tasks.PropertyMeterReadingsImportTask.progress.description.completed.link.label": "Download",
+  "tasks.PropertyMeterReadingsImportTask.progress.description.error": "File not imported. {errorMessage}",
+  "tasks.PropertyMeterReadingsImportTask.progress.description.partiallyCompleted": "File partially imported. Fix errors and upload broken records again",
+  "tasks.PropertyMeterReadingsImportTask.progress.description.preparing": "Preparing to import meter readings",
+  "tasks.PropertyMeterReadingsImportTask.progress.description.processing": "Meter readings processed: {imported} of {total}",
+  "tasks.PropertyMeterReadingsImportTask.progress.title": "Import property meter readings",
   "tasks.NewsItemRecipientsExportTask.progress.description.completed": "File has been created",
   "tasks.NewsItemRecipientsExportTask.progress.description.completed.link.label": "Download",
   "tasks.NewsItemRecipientsExportTask.progress.description.preparing": "Preparing for export",
