--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1464,6 +1464,9 @@
   "notification.UserMessagesSettingModal.messageType.TICKET_COMMENT_CREATED.label": "About new ticket comments",
   "notification.UserMessagesSettingModal.messageType.TICKET_CREATED.label": "About new tickets",
   "notification.UserMessagesSettingModal.title": "What kind of notifications do you want to see?",
+  "notification.UserMessagesSettingModal.sound": "Sound",
+  "notification.UserMessagesSettingModal.sound.tooltip.enabled": "Notifications currently arrive with sound",
+  "notification.UserMessagesSettingModal.sound.tooltip.disabled": "Notifications currently arrive without sound",
   "notification.messages.B2B_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.subject": "Bank account creation",
