--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1464,6 +1464,9 @@
   "notification.UserMessagesSettingModal.messageType.TICKET_COMMENT_CREATED.label": "Sobre nuevos comentarios de tickets",
   "notification.UserMessagesSettingModal.messageType.TICKET_CREATED.label": "Sobre nuevos tickets",
   "notification.UserMessagesSettingModal.title": "¿Qué tipo de notificaciones quieres ver?",
+  "notification.UserMessagesSettingModal.sound": "Sonido",
+  "notification.UserMessagesSettingModal.sound.tooltip.enabled": "Las notificaciones llegan actualmente con sonido",
+  "notification.UserMessagesSettingModal.sound.tooltip.disabled": "Las notificaciones llegan actualmente sin sonido",
   "notification.messages.B2B_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.subject": "Apertura de cuenta corriente de la comunidad",
