feat(condo): DOMA-5258 add cancel type to voip push message (#5850)
* feat(condo): DOMA-5258 add cancel type to voip push message

* feat(condo): DOMA-5258 changed push type from VoIP push to regular push

* feat(condo): DOMA-5258 proof of work new message type

* feat(condo): DOMA-5258 remove unnecessary code

* feat(condo): DOMA-5258 rename field in delivery options

* feat(condo): DOMA-5258 comments after review have been corrected

* feat(condo): DOMA-5258 add tests for new type message

* feat(condo): DOMA-5258 add defaultValue to getPreferredPushTypeByMessageType utils

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1575,6 +1575,7 @@
   "notification.messages.TICKET_STATUS_RETURNED.email.subject": "Hi, it's Doma! 🦖",
   "notification.messages.TICKET_STATUS_RETURNED.push.title": "Ticket is open 💡",
   "notification.messages.VOIP_INCOMING_CALL_MESSAGE.push.title": "{title}",
+  "notification.messages.CANCELED_CALL_MESSAGE_PUSH.push.title": "{title}",
   "onboarding.tourStep.tooltip.ticket.message": "Make sure the information is correct and create an ticket",
   "onboarding.tourStep.tooltip.ticket.title": "Multiple fields filled automatically",
   "pages.auth.AlreadyRegistered": "Already registered",
