feat(condo): DOMA-10993 refactor form divided the form blocks into components Add custom porting Add custom selector for recipients

--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -981,6 +981,7 @@
   "excelExport.tickets.ticketFromResident": "vecino",
   "field.AccountNumberShort": "Cuenta personal",
   "field.Address": "La dirección",
+  "field.Recipients": "Destinatarios",
   "field.Address.notFound": "La dirección no encontrada. Es posible que esta comunidad aún no se haya añadido a «Doma».",
   "field.Address.notFound.default": "Dirección no encontrada: es posible que esta comunidad no se haya añadido a la plataforma. Puede añadirla",
   "field.Address.notFound.default.link": "en la sección «Comunidades»",
@@ -1109,6 +1110,7 @@
   "global.section.tickets": "Incidencias",
   "global.section.tour": "Guía",
   "global.select.address": "Seleccionar las direcciones",
+  "global.select.recipients": "Seleccionar destinatarios",
   "global.select.deletedEmployee": "Empleado eliminado",
   "global.select.deletedOption": "Eliminado",
   "global.share": "Enviar",
