--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -981,6 +981,7 @@
   "excelExport.tickets.ticketFromResident": "resident",
   "field.AccountNumberShort": "Account Number",
   "field.Address": "Address",
+  "field.Recipients": "Recipients",
   "field.Address.notFound": "Address not found. Maybe this house is not added into CRM",
   "field.Address.notFound.default": "Address not found - maybe house not added to platform. You can add it",
   "field.Address.notFound.default.link": "in the «Properties» section",
@@ -1109,6 +1110,7 @@
   "global.section.tickets": "Tickets",
   "global.section.tour": "Tour",
   "global.select.address": "Select address",
+  "global.select.recipients": "Select recipients",
   "global.select.deletedEmployee": "Deleted employee",
   "global.select.deletedOption": "Deleted",
   "global.share": "Share",
