--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -981,6 +981,7 @@
   "excelExport.tickets.ticketFromResident": "житель",
   "field.AccountNumberShort": "ЛС",
   "field.Address": "Адрес",
+  "field.Recipients": "Получатели",
   "field.Address.notFound": "Адрес не найден. Возможно, этот дом ещё не добавлен в «Домá».",
   "field.Address.notFound.default": "Адрес не найден — возможно, дом не добавлен на платформу. Вы можете добавить его",
   "field.Address.notFound.default.link": "в разделе «Дома»",
@@ -1109,6 +1110,7 @@
   "global.section.tickets": "Заявки",
   "global.section.tour": "Путеводитель",
   "global.select.address": "Выбрать адреса",
+  "global.select.recipients": "Выбрать получателей",
   "global.select.deletedEmployee": "Удаленный сотрудник",
   "global.select.deletedOption": "Удалено",
   "global.share": "Отправить",
