--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -3270,5 +3270,197 @@
   "tour.viewGuide": "View Guide",
   "trial.startPeriod": "Start trial period",
   "trial.subTitle": "And then...",
-  "trial.title": "Free period of 14 days"
+  "trial.title": "Free period of 14 days",
+  "ticket.category.classifier.TECHNICAL_ISSUES.name": "Technical issues",
+  "ticket.category.classifier.CALL_GUARD.name": "Call Guard",
+  "ticket.category.classifier.PASS.name": "Pass",
+  "ticket.category.classifier.EMERGENCY.name": "Emergency",
+  "ticket.category.classifier.BEAUTIFICATION.name": "Beautification",
+  "ticket.category.classifier.ACCESS.name": "Access",
+  "ticket.category.classifier.REPAIR.name": "Repair",
+  "ticket.category.classifier.CLEANING.name": "Cleaning",
+  "ticket.category.classifier.ELECTRICAL.name": "Electrical",
+  "ticket.category.classifier.VENTILATION.name": "Ventilation",
+  "ticket.category.classifier.WATER.name": "Water",
+  "ticket.category.classifier.GAS.name": "Gas",
+  "ticket.category.classifier.WARRANTY_REPAIR.name": "Warranty Repair",
+  "ticket.category.classifier.INTERCOM.name": "Intercom",
+  "ticket.category.classifier.INTERNET.name": "Internet",
+  "ticket.category.classifier.SEWER.name": "Sewer",
+  "ticket.category.classifier.COMMERCIAL_SERVICES.name": "Commercial Services",
+  "ticket.category.classifier.SURVEY.name": "Survey",
+  "ticket.category.classifier.HEATING.name": "Heating",
+  "ticket.category.classifier.FIRE_PROTECTION.name": "Fire protection",
+  "ticket.category.classifier.COUNTERS.name": "Counters",
+  "ticket.category.classifier.TV.name": "TV",
+  "ticket.category.classifier.DEBT.name": "Debt",
+  "ticket.category.classifier.ACCRUALS_AND_PAYMENT.name": "Accruals and payment",
+  "ticket.category.classifier.GET_RECEIPT.name": "Get receipt",
+  "ticket.category.classifier.VIDEO_SURVEILLANCE.name": "Video Surveillance",
+  "ticket.category.classifier.ELEVATOR.name": "Elevator",
+  "ticket.category.classifier.GARBAGE_CHUTE.name": "Garbage Chute",
+  "ticket.category.classifier.DISABLED_LIFT.name": "Disabled Lift",
+  "ticket.category.classifier.ACTS.name": "Acts",
+  "ticket.category.classifier.STATEMENT.name": "Statement",
+  "ticket.category.classifier.HELP.name": "Help",
+  "ticket.category.classifier.REQUEST.name": "Request",
+  "ticket.category.classifier.INFORMING_RESIDENTS.name": "Informing Residents",
+  "ticket.category.classifier.THANKS.name": "Thanks",
+  "ticket.category.classifier.COMPLAINT.name": "Complaint",
+  "ticket.category.classifier.IMPROVEMENT_SUGGESTION.name": "Improvement suggestion",
+  "ticket.problem.classifier.PERSONAL_ACCOUNT.name": "Personal account",
+  "ticket.problem.classifier.MOBILE_APPLICATION.name": "Mobile Application",
+  "ticket.problem.classifier.SITE.name": "Site",
+  "ticket.problem.classifier.CALL_GUARD.name": "Call Guard",
+  "ticket.problem.classifier.EXPLOSION_FIRE_DESTRUCTION.name": "Explosion/Fire/Destruction",
+  "ticket.problem.classifier.TERRORIST_THREAT.name": "Terrorist threat",
+  "ticket.problem.classifier.GREENING.name": "Greening",
+  "ticket.problem.classifier.ADDITIONAL_HARDWARE_INSTALLATION.name": "Additional Hardware Installation",
+  "ticket.problem.classifier.GREEN_CARE.name": "Green Care",
+  "ticket.problem.classifier.ACCESS_RESTRICTION.name": "Access restriction",
+  "ticket.problem.classifier.GRANTING_ACCESS.name": "Granting access",
+  "ticket.problem.classifier.GATE_BARRIER.name": "Gate/Barrier",
+  "ticket.problem.classifier.INVENTORY_EQUIPMENT.name": "Inventory/Equipment",
+  "ticket.problem.classifier.TRASH_DIRT.name": "Trash/Dirt",
+  "ticket.problem.classifier.SNOW_ICE.name": "Snow, ice",
+  "ticket.problem.classifier.LIGHTING_ISSUES.name": "Lighting Issues",
+  "ticket.problem.classifier.COVERAGE.name": "Coverage",
+  "ticket.problem.classifier.VIBRATION_NOISE.name": "Vibration/Noise",
+  "ticket.problem.classifier.VENTILATION_DISABLED.name": "Ventilation disabled",
+  "ticket.problem.classifier.FOREIGN_OBJECTS.name": "Foreign Objects",
+  "ticket.problem.classifier.SCENT_COLOR.name": "Scent/Color",
+  "ticket.problem.classifier.NO_HOT_WATER.name": "No hot water",
+  "ticket.problem.classifier.NO_COLD_WATER.name": "No cold water",
+  "ticket.problem.classifier.NO_HOT_AND_COLD_WATER.name": "No hot and cold water",
+  "ticket.problem.classifier.WEAK_WATER_PRESSURE.name": "Weak water pressure",
+  "ticket.problem.classifier.TEMPERATURE_MISMATCH.name": "Temperature Mismatch",
+  "ticket.problem.classifier.PLUMBING_LEAK.name": "Plumbing Leak",
+  "ticket.problem.classifier.LEAK_FLOW.name": "Leak/Flow",
+  "ticket.problem.classifier.COLD_TOWEL_WARMER.name": "Cold Towel Warmer",
+  "ticket.problem.classifier.VENTILATION_DUCT_CHIMNEY.name": "Ventilation Duct/Chimney",
+  "ticket.problem.classifier.SMELL_OF_GAS.name": "Smell of gas",
+  "ticket.problem.classifier.NO_GAS.name": "No Gas",
+  "ticket.problem.classifier.DOORS.name": "Doors",
+  "ticket.problem.classifier.WINDOWS.name": "Windows",
+  "ticket.problem.classifier.TRIM.name": "Trim",
+  "ticket.problem.classifier.PLUMBING.name": "Plumbing",
+  "ticket.problem.classifier.COUNTERS.name": "Counters",
+  "ticket.problem.classifier.ELECTRICAL.name": "Electrical",
+  "ticket.problem.classifier.KEY_MAKING.name": "Key making",
+  "ticket.problem.classifier.DOORPHONE_CODE_PROVISION.name": "Doorphone code provision",
+  "ticket.problem.classifier.DEVICE_REPAIR.name": "Device Repair",
+  "ticket.problem.classifier.DEVICE_INSTALLATION.name": "Device Installation",
+  "ticket.problem.classifier.NOT_WORKING.name": "Not working",
+  "ticket.problem.classifier.CONNECTING.name": "Connecting",
+  "ticket.problem.classifier.RISER_HUM_VIBRATION.name": "Riser hum/vibration",
+  "ticket.problem.classifier.SMELL.name": "Smell",
+  "ticket.problem.classifier.CLOGGED.name": "Clogged",
+  "ticket.problem.classifier.LOADER_CALL.name": "Loader Call",
+  "ticket.problem.classifier.CALL_A_PLUMBER.name": "Call a plumber",
+  "ticket.problem.classifier.CALL_AN_ELECTRICIAN.name": "Call an Electrician",
+  "ticket.problem.classifier.WINDOW_CLEANING.name": "Window cleaning",
+  "ticket.problem.classifier.GUARD.name": "Guard",
+  "ticket.problem.classifier.APPLIANCE_REPAIR.name": "Appliance Repair",
+  "ticket.problem.classifier.FURNITURE_ASSEMBLY.name": "Furniture assembly",
+  "ticket.problem.classifier.APARTMENT_INSURANCE.name": "Apartment insurance",
+  "ticket.problem.classifier.CLEANUP.name": "Cleanup",
+  "ticket.problem.classifier.AIR_CONDITIONER_INSTALLATION_REPAIR.name": "Air conditioner installation/repair",
+  "ticket.problem.classifier.DRY_CLEANING.name": "Dry Cleaning",
+  "ticket.problem.classifier.SURVEY.name": "Survey",
+  "ticket.problem.classifier.NO_HEATING.name": "No heating",
+  "ticket.problem.classifier.DISABLING_SENSORS.name": "Disabling sensors",
+  "ticket.problem.classifier.CONNECT_SENSORS.name": "Connect sensors",
+  "ticket.problem.classifier.REPAIR_REPLACE_SENSORS.name": "Repair/Replace Sensors",
+  "ticket.problem.classifier.SECONDARY_SEAL.name": "Secondary seal",
+  "ticket.problem.classifier.PRIMARY_SEAL.name": "Primary seal",
+  "ticket.problem.classifier.INCORRECT_METER_READINGS_TRANSMITTED.name": "Incorrect meter readings transmitted",
+  "ticket.problem.classifier.TRANSFER_OF_VERIFICATION_CERTIFICATES.name": "Transfer of Verification Certificates",
+  "ticket.problem.classifier.VERIFICATION.name": "Verification",
+  "ticket.problem.classifier.CONNECTING_A_METERING_DEVICE_TO_THE_ACS.name": "Connecting a metering device to the ACS",
+  "ticket.problem.classifier.VERIFICATION_PERIOD.name": "Verification period",
+  "ticket.problem.classifier.INSTALL_REPLACE.name": "Install/Replace",
+  "ticket.problem.classifier.NO_POWER.name": "No power",
+  "ticket.problem.classifier.POWER_SURGES.name": "Power surges",
+  "ticket.problem.classifier.DEBT_REPAYMENT.name": "Debt Repayment",
+  "ticket.problem.classifier.PERSONAL_ACCOUNT_NUMBER.name": "Personal account number",
+  "ticket.problem.classifier.DISABLE_SERVICES.name": "Disable services",
+  "ticket.problem.classifier.RECALCULATE.name": "Recalculate",
+  "ticket.problem.classifier.SEARCH_FOR_PAYMENT.name": "Search for payment",
+  "ticket.problem.classifier.ACCOUNT_CLARIFICATIONS.name": "Account Clarifications",
+  "ticket.problem.classifier.TICKETING.name": "Ticketing",
+  "ticket.problem.classifier.TICKET_NOT_RECEIVED_IN_TIME.name": "Ticket not received in time",
+  "ticket.problem.classifier.RETRIEVE_TICKET.name": "Retrieve Ticket",
+  "ticket.problem.classifier.DOORS_WINDOWS_BARS.name": "Doors, windows, bars",
+  "ticket.problem.classifier.ROOF_DAMAGE.name": "Roof Damage",
+  "ticket.problem.classifier.CAR_WASH.name": "Car Wash",
+  "ticket.problem.classifier.PIPELINE_AND_EQUIPMENT_PAINTING_REPAIR.name": "Pipeline and equipment painting/repair",
+  "ticket.problem.classifier.STUCK.name": "Stuck",
+  "ticket.problem.classifier.CLOGGED_GARBAGE_CHUTE.name": "Clogged garbage chute",
+  "ticket.problem.classifier.INFORMATION_STAND.name": "Information stand",
+  "ticket.problem.classifier.PORCH.name": "Porch",
+  "ticket.problem.classifier.GARBAGE_CHUTE.name": "Garbage Chute",
+  "ticket.problem.classifier.MAILBOX.name": "Mailbox",
+  "ticket.problem.classifier.CLUTTER.name": "Clutter",
+  "ticket.problem.classifier.SPARK_IN_THE_SHIELD.name": "Spark in the shield",
+  "ticket.problem.classifier.MOTION_SENSOR_NOT_WORKING.name": "Motion sensor not working",
+  "ticket.problem.classifier.TRAP_LEAK_HOVER.name": "Trap leak/hover",
+  "ticket.problem.classifier.TRAPDOOR_OPEN.name": "Trapdoor open",
+  "ticket.problem.classifier.APARTMENT_FLOOD_REPORT.name": "Apartment flood report",
+  "ticket.problem.classifier.APARTMENT_TEMPERATURE_CHECK_REPORT.name": "Apartment temperature check report",
+  "ticket.problem.classifier.DHW_TEMPERATURE_CHECK_REPORT.name": "DHW temperature check report",
+  "ticket.problem.classifier.CONTROL_READING_STATEMENT.name": "Control Reading Statement",
+  "ticket.problem.classifier.EXTRACT_FROM_THE_HOUSE_BOOK.name": "Extract from the house book",
+  "ticket.problem.classifier.DEBT_FLS_PENALTY_CERTIFICATE.name": "Debt/FLS/penalty certificate",
+  "ticket.problem.classifier.GETTING_TICKETS_FOR_COUNTERS.name": "Getting tickets for counters",
+  "ticket.problem.classifier.RECEPTION_TRANSMISSION_OF_DOCUMENTS.name": "Reception/transmission of documents",
+  "ticket.problem.classifier.APPOINTMENT.name": "Appointment",
+  "ticket.problem.classifier.GETTING_KEYS_FROM_THE_MAILBOX.name": "Getting keys from the mailbox",
+  "ticket.problem.classifier.PROVIDING_CCTV_FOOTAGE.name": "Providing CCTV footage",
+  "ticket.problem.classifier.MISSING_INFORMATION_GETTING_INFORMATION.name": "Missing Information/Getting Information",
+  "ticket.problem.classifier.TO_CC_OPERATOR.name": "To CC Operator",
+  "ticket.problem.classifier.HOUSE_STAFF_GUARD_CONCIERGE_CLEANER_JANITOR.name": "House staff (guard, concierge, cleaner, janitor)",
+  "ticket.problem.classifier.TO_CC_EMPLOYEE.name": "To CC employee",
+  "ticket.problem.classifier.FOR_A_LONG_WAIT_FOR_AN_OPERATOR_RESPONSE.name": "For a long wait for an operator's response",
+  "ticket.problem.classifier.TO_CC_OPERATOR_2.name": "To CC Operator",
+  "ticket.problem.classifier.HOUSE_PERSONNEL_SECURITY_GUARD_CONCIERGE_CLEANER_JANITOR.name": "House personnel (security guard, concierge, cleaner, janitor)",
+  "ticket.problem.classifier.PER_CC_EMPLOYEE.name": "Per CC employee",
+  "ticket.problem.classifier.QUALITY_IMPROVEMENT_PROPOSAL.name": "Quality improvement proposal",
+  "ticket.problem.classifier.FREEZING.name": "Freezing",
+  "ticket.problem.classifier.SEAM_BALCONY_WINDOW_ROOF_LEAKAGE.name": "Seam/balcony/window/roof leakage",
+  "ticket.place.classifier.IT_SERVICES.name": "IT services",
+  "ticket.place.classifier.SECURITY.name": "Security",
+  "ticket.place.classifier.COURTYARD.name": "Courtyard",
+  "ticket.place.classifier.APARTMENT.name": "Apartment",
+  "ticket.place.classifier.RECEIPT.name": "Receipt",
+  "ticket.place.classifier.PARKING.name": "Parking",
+  "ticket.place.classifier.ENTRANCEWAY.name": "Entranceway",
+  "ticket.place.classifier.PAVEMENTS_ROADS_LAWNS.name": "Pavements, roads, lawns",
+  "ticket.place.classifier.DOCUMENTS.name": "Documents",
+  "ticket.place.classifier.FACADES.name": "Facades",
+  "ticket.place.classifier.ATTICS_BASEMENTS.name": "Attics, basements",
+  "ticket.place.classifier.ROOFING.name": "Roof",
+  "ticket.place.classifier.NON_RESIDENTIAL_PREMISES.name": "Non-residential premise",
+  "ticket.place.classifier.FEEDBACK_ON_WORK.name": "Feedback about the work",
+  "ticket.problem.classifier.ORDER_RECEIPT_CHANGE.name": "Order/Receipt/Change",
+  "ticket.problem.classifier.RESIDENT_AFFECTED.name": "A resident was injured",
+  "ticket.problem.classifier.PROPERTY_DAMAGED.name": "Property affected",
+  "ticket.problem.classifier.PROJECTS_TECHNICAL_SPECIFICATIONS.name": "Projects/Technical Specifications",
+  "ticket.problem.classifier.GUTTER_STORM_DRAIN_DAMAGE.name": "Waterspout / storm drain damage",
+  "ticket.problem.classifier.SNOW_ICE_REMOVAL_ON_ROOF.name": "Snow, ice, and icicle removal from the roof",
+  "ticket.problem.classifier.PARKING_SPOT_OCCUPIED.name": "Parking space occupied, unauthorized vehicles in the parking area",
+  "ticket.problem.classifier.CURRENT_REPAIR.name": "Current repair",
+  "ticket.problem.classifier.REPAIR_MALFUNCTION.name": "Repair/Malfunction",
+  "ticket.problem.classifier.ELEVATOR_CABIN_ELEMENT_FAILURE.name": "Malfunction of elevator cabin components",
+  "ticket.problem.classifier.NO_CONNECTION_WITH_DISPATCHER.name": "No communication with dispatcher",
+  "ticket.problem.classifier.NO_LIGHTING.name": "No lighting",
+  "ticket.problem.classifier.SHAKING_SCRAPING_NOISE.name": "Vibration/screeching/noise",
+  "ticket.problem.classifier.ITEMS_DROPPED_IN_ELEVATOR_SHAFT.name": "Keys/things fell down the lift shaft",
+  "ticket.problem.classifier.CLOSE_SMOKE_EVACUATION_VALVE.name": "Close smoke exhaust valve",
+  "ticket.problem.classifier.FIRE_HOSE_CABINETS_PRESENT.name": "Availability of hoses, cabinets, etc.",
+  "ticket.problem.classifier.FIRE_ALARM_TRIGGERED.name": "The fire alarm was triggered",
+  "ticket.problem.classifier.WALLS_CEILING_FLOOR_STRUCTURES.name": "Walls, ceiling, floor, slabs",
+  "ticket.problem.classifier.PEST_CONTROL_DISINFECTION.name": "Deratisation, disinsection, disinfection",
+  "ticket.problem.classifier.CRACKS_MASONRY_PLASTER_DAMAGE.name": "Cracks, falling out of masonry/plaster, damage to the pavement/jamb",
+  "ticket.problem.classifier.SIGNAGE_ADVERTISING_EQUIPMENT_ON_FACADE.name": "Inscription/advertising/equipment on facade",
+  "ticket.problem.classifier.REPAIR_IN_ROOM.name": "Room repair"
 }
