--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -3270,5 +3270,197 @@
   "tour.viewGuide": "Ver guía",
   "trial.startPeriod": "Empezar período de prueba",
   "trial.subTitle": "Y después...",
-  "trial.title": "Periodo gratuito de 14 días"
+  "trial.title": "Periodo gratuito de 14 días",
+  "ticket.category.classifier.TECHNICAL_ISSUES.name": "Problemas técnicos",
+  "ticket.category.classifier.CALL_GUARD.name": "Guardia de llamada",
+  "ticket.category.classifier.PASS.name": "Pase",
+  "ticket.category.classifier.EMERGENCY.name": "Emergencia",
+  "ticket.category.classifier.BEAUTIFICATION.name": "Mejoras",
+  "ticket.category.classifier.ACCESS.name": "Acceso",
+  "ticket.category.classifier.REPAIR.name": "Reparación",
+  "ticket.category.classifier.CLEANING.name": "Limpieza",
+  "ticket.category.classifier.ELECTRICAL.name": "Eléctricidad",
+  "ticket.category.classifier.VENTILATION.name": "Ventilación",
+  "ticket.category.classifier.WATER.name": "Agua",
+  "ticket.category.classifier.GAS.name": "Gas",
+  "ticket.category.classifier.WARRANTY_REPAIR.name": "Reparación en Garantía",
+  "ticket.category.classifier.INTERCOM.name": "Interfono",
+  "ticket.category.classifier.INTERNET.name": "Internet",
+  "ticket.category.classifier.SEWER.name": "Alcantarillado",
+  "ticket.category.classifier.COMMERCIAL_SERVICES.name": "Servicios Comerciales",
+  "ticket.category.classifier.SURVEY.name": "Encuesta",
+  "ticket.category.classifier.HEATING.name": "Calefacción",
+  "ticket.category.classifier.FIRE_PROTECTION.name": "Protección contra incendios",
+  "ticket.category.classifier.COUNTERS.name": "Contadores",
+  "ticket.category.classifier.TV.name": "TV",
+  "ticket.category.classifier.DEBT.name": "Deuda",
+  "ticket.category.classifier.ACCRUALS_AND_PAYMENT.name": "Cobros y pagos",
+  "ticket.category.classifier.GET_RECEIPT.name": "Obtener recibo",
+  "ticket.category.classifier.VIDEO_SURVEILLANCE.name": "Videovigilancia",
+  "ticket.category.classifier.ELEVATOR.name": "Ascensor",
+  "ticket.category.classifier.GARBAGE_CHUTE.name": "Basurero",
+  "ticket.category.classifier.DISABLED_LIFT.name": "Ascensor para discapacitados",
+  "ticket.category.classifier.ACTS.name": "Actos",
+  "ticket.category.classifier.STATEMENT.name": "Declaración",
+  "ticket.category.classifier.HELP.name": "Ayuda",
+  "ticket.category.classifier.REQUEST.name": "Solicitud",
+  "ticket.category.classifier.INFORMING_RESIDENTS.name": "Informar a los vecinos",
+  "ticket.category.classifier.THANKS.name": "Agradecimientos",
+  "ticket.category.classifier.COMPLAINT.name": "Quejas",
+  "ticket.category.classifier.IMPROVEMENT_SUGGESTION.name": "Sugerencia de mejora",
+  "ticket.problem.classifier.PERSONAL_ACCOUNT.name": "Cuenta personal",
+  "ticket.problem.classifier.MOBILE_APPLICATION.name": "Aplicación móvil",
+  "ticket.problem.classifier.SITE.name": "Sitio",
+  "ticket.problem.classifier.CALL_GUARD.name": "Guardia de llamada",
+  "ticket.problem.classifier.EXPLOSION_FIRE_DESTRUCTION.name": "Explosión/Fuego/Destrucción",
+  "ticket.problem.classifier.TERRORIST_THREAT.name": "Amenaza terrorista",
+  "ticket.problem.classifier.GREENING.name": "Enverdecimiento",
+  "ticket.problem.classifier.ADDITIONAL_HARDWARE_INSTALLATION.name": "Instalación adicional de hardware",
+  "ticket.problem.classifier.GREEN_CARE.name": "Jardinería",
+  "ticket.problem.classifier.ACCESS_RESTRICTION.name": "Restricción de acceso",
+  "ticket.problem.classifier.GRANTING_ACCESS.name": "Conceder acceso",
+  "ticket.problem.classifier.GATE_BARRIER.name": "Puerta/barrera",
+  "ticket.problem.classifier.INVENTORY_EQUIPMENT.name": "Inventario/Equipamiento",
+  "ticket.problem.classifier.TRASH_DIRT.name": "Basura/Suciedad",
+  "ticket.problem.classifier.SNOW_ICE.name": "Nieve, hielo",
+  "ticket.problem.classifier.LIGHTING_ISSUES.name": "Problemas de iluminación",
+  "ticket.problem.classifier.COVERAGE.name": "Cobertura",
+  "ticket.problem.classifier.VIBRATION_NOISE.name": "Vibración/Ruido",
+  "ticket.problem.classifier.VENTILATION_DISABLED.name": "Ventilación desactivada",
+  "ticket.problem.classifier.FOREIGN_OBJECTS.name": "Objetos extraños",
+  "ticket.problem.classifier.SCENT_COLOR.name": "Olor",
+  "ticket.problem.classifier.NO_HOT_WATER.name": "No hay agua caliente",
+  "ticket.problem.classifier.NO_COLD_WATER.name": "No hay agua fría",
+  "ticket.problem.classifier.NO_HOT_AND_COLD_WATER.name": "No hay agua caliente ni fría",
+  "ticket.problem.classifier.WEAK_WATER_PRESSURE.name": "Presión de agua débil",
+  "ticket.problem.classifier.TEMPERATURE_MISMATCH.name": "Desajuste de temperatura",
+  "ticket.problem.classifier.PLUMBING_LEAK.name": "Fuga de fontanería",
+  "ticket.problem.classifier.LEAK_FLOW.name": "Fuga/Flujo",
+  "ticket.problem.classifier.COLD_TOWEL_WARMER.name": "Toallero frío",
+  "ticket.problem.classifier.VENTILATION_DUCT_CHIMNEY.name": "Conducto de ventilación/Chimenea",
+  "ticket.problem.classifier.SMELL_OF_GAS.name": "Olor a gas",
+  "ticket.problem.classifier.NO_GAS.name": "No hay gas",
+  "ticket.problem.classifier.DOORS.name": "Puertas",
+  "ticket.problem.classifier.WINDOWS.name": "Ventanas",
+  "ticket.problem.classifier.TRIM.name": "Decoración",
+  "ticket.problem.classifier.PLUMBING.name": "Fontanería",
+  "ticket.problem.classifier.COUNTERS.name": "Contadores",
+  "ticket.problem.classifier.ELECTRICAL.name": "Eléctrico",
+  "ticket.problem.classifier.KEY_MAKING.name": "Fabricación de llaves",
+  "ticket.problem.classifier.DOORPHONE_CODE_PROVISION.name": "Provisión de código de portero automático",
+  "ticket.problem.classifier.DEVICE_REPAIR.name": "Reparación de dispositivo",
+  "ticket.problem.classifier.DEVICE_INSTALLATION.name": "Instalación del dispositivo",
+  "ticket.problem.classifier.NOT_WORKING.name": "No funciona",
+  "ticket.problem.classifier.CONNECTING.name": "Conectando",
+  "ticket.problem.classifier.RISER_HUM_VIBRATION.name": "Zumbido/vibración",
+  "ticket.problem.classifier.SMELL.name": "Olor",
+  "ticket.problem.classifier.CLOGGED.name": "Obstrucción",
+  "ticket.problem.classifier.LOADER_CALL.name": "Llamada a un cargador",
+  "ticket.problem.classifier.CALL_A_PLUMBER.name": "Llamar a un fontanero",
+  "ticket.problem.classifier.CALL_AN_ELECTRICIAN.name": "Llamar a un electricista",
+  "ticket.problem.classifier.WINDOW_CLEANING.name": "Limpieza de cristales",
+  "ticket.problem.classifier.GUARD.name": "Guardia",
+  "ticket.problem.classifier.APPLIANCE_REPAIR.name": "Reparación de electrodomésticos",
+  "ticket.problem.classifier.FURNITURE_ASSEMBLY.name": "Montaje de muebles",
+  "ticket.problem.classifier.APARTMENT_INSURANCE.name": "Seguro de apartamento",
+  "ticket.problem.classifier.CLEANUP.name": "Limpieza",
+  "ticket.problem.classifier.AIR_CONDITIONER_INSTALLATION_REPAIR.name": "Instalación/reparación de aire acondicionado",
+  "ticket.problem.classifier.DRY_CLEANING.name": "Tintorería",
+  "ticket.problem.classifier.SURVEY.name": "Encuesta",
+  "ticket.problem.classifier.NO_HEATING.name": "No hay calefacción",
+  "ticket.problem.classifier.DISABLING_SENSORS.name": "Desactivar sensores",
+  "ticket.problem.classifier.CONNECT_SENSORS.name": "Conectar sensores",
+  "ticket.problem.classifier.REPAIR_REPLACE_SENSORS.name": "Reparar/sustituir sensores",
+  "ticket.problem.classifier.SECONDARY_SEAL.name": "Sellado secundario",
+  "ticket.problem.classifier.PRIMARY_SEAL.name": "Sellado primario",
+  "ticket.problem.classifier.INCORRECT_METER_READINGS_TRANSMITTED.name": "Transmitidas lecturas de contador son incorrectas",
+  "ticket.problem.classifier.TRANSFER_OF_VERIFICATION_CERTIFICATES.name": "Transferencia de certificados de verificación",
+  "ticket.problem.classifier.VERIFICATION.name": "Verificación",
+  "ticket.problem.classifier.CONNECTING_A_METERING_DEVICE_TO_THE_ACS.name": "Conexión de un dispositivo de medición",
+  "ticket.problem.classifier.VERIFICATION_PERIOD.name": "Período de verificación",
+  "ticket.problem.classifier.INSTALL_REPLACE.name": "Instalar/Reemplazar",
+  "ticket.problem.classifier.NO_POWER.name": "Tensión baja",
+  "ticket.problem.classifier.POWER_SURGES.name": "Subidas de tensión",
+  "ticket.problem.classifier.DEBT_REPAYMENT.name": "Pago de la deuda",
+  "ticket.problem.classifier.PERSONAL_ACCOUNT_NUMBER.name": "Número de cuenta personal",
+  "ticket.problem.classifier.DISABLE_SERVICES.name": "Desactivar servicios",
+  "ticket.problem.classifier.RECALCULATE.name": "Recalcular",
+  "ticket.problem.classifier.SEARCH_FOR_PAYMENT.name": "Búsqueda de pago",
+  "ticket.problem.classifier.ACCOUNT_CLARIFICATIONS.name": "Aclaraciones sobre la cuenta",
+  "ticket.problem.classifier.TICKETING.name": "Solicitudes",
+  "ticket.problem.classifier.TICKET_NOT_RECEIVED_IN_TIME.name": "Solicitud no recibida a tiempo",
+  "ticket.problem.classifier.RETRIEVE_TICKET.name": "Recuperar solicitud",
+  "ticket.problem.classifier.DOORS_WINDOWS_BARS.name": "Puertas, ventanas, rejas",
+  "ticket.problem.classifier.ROOF_DAMAGE.name": "Daños en el tejado",
+  "ticket.problem.classifier.CAR_WASH.name": "Lavado de coches",
+  "ticket.problem.classifier.PIPELINE_AND_EQUIPMENT_PAINTING_REPAIR.name": "Pintura/reparación de tuberías y equipos",
+  "ticket.problem.classifier.STUCK.name": "Bloqueo",
+  "ticket.problem.classifier.CLOGGED_GARBAGE_CHUTE.name": "Atasco en basurero",
+  "ticket.problem.classifier.INFORMATION_STAND.name": "Tablón de anuncios",
+  "ticket.problem.classifier.PORCH.name": "Pórtico",
+  "ticket.problem.classifier.GARBAGE_CHUTE.name": "Basurero",
+  "ticket.problem.classifier.MAILBOX.name": "Buzón",
+  "ticket.problem.classifier.CLUTTER.name": "Desorden",
+  "ticket.problem.classifier.SPARK_IN_THE_SHIELD.name": "Chispa en armario eléctrico",
+  "ticket.problem.classifier.MOTION_SENSOR_NOT_WORKING.name": "Sensor de movimiento no funciona",
+  "ticket.problem.classifier.TRAP_LEAK_HOVER.name": "Fugas",
+  "ticket.problem.classifier.TRAPDOOR_OPEN.name": "Trampilla abierta",
+  "ticket.problem.classifier.APARTMENT_FLOOD_REPORT.name": "Informe de inundación del piso",
+  "ticket.problem.classifier.APARTMENT_TEMPERATURE_CHECK_REPORT.name": "Informe de comprobación de la temperatura de la propiedad",
+  "ticket.problem.classifier.DHW_TEMPERATURE_CHECK_REPORT.name": "Informe de comprobación de temperatura de agua caliente",
+  "ticket.problem.classifier.CONTROL_READING_STATEMENT.name": "Lectura de control",
+  "ticket.problem.classifier.EXTRACT_FROM_THE_HOUSE_BOOK.name": "Extracto del libro de la finca",
+  "ticket.problem.classifier.DEBT_FLS_PENALTY_CERTIFICATE.name": "Certificado de deuda/penalización",
+  "ticket.problem.classifier.GETTING_TICKETS_FOR_COUNTERS.name": "Obtención de pasaportes para contadores",
+  "ticket.problem.classifier.RECEPTION_TRANSMISSION_OF_DOCUMENTS.name": "Recepción/transmisión de documentos",
+  "ticket.problem.classifier.APPOINTMENT.name": "Cita previa",
+  "ticket.problem.classifier.GETTING_KEYS_FROM_THE_MAILBOX.name": "Obtención de llaves del buzón de correo",
+  "ticket.problem.classifier.PROVIDING_CCTV_FOOTAGE.name": "Acceso a grabaciones de videovigilancia",
+  "ticket.problem.classifier.MISSING_INFORMATION_GETTING_INFORMATION.name": "Obtención de información",
+  "ticket.problem.classifier.TO_CC_OPERATOR.name": "Al operador de atención al cliente",
+  "ticket.problem.classifier.HOUSE_STAFF_GUARD_CONCIERGE_CLEANER_JANITOR.name": "Personal de la casa (guardia, conserje, limpieza)",
+  "ticket.problem.classifier.TO_CC_EMPLOYEE.name": "Al empleado de atención al cliente",
+  "ticket.problem.classifier.FOR_A_LONG_WAIT_FOR_AN_OPERATOR_RESPONSE.name": "Por una larga espera de la respuesta del operador",
+  "ticket.problem.classifier.TO_CC_OPERATOR_2.name": "Al operador de atención al cliente",
+  "ticket.problem.classifier.HOUSE_PERSONNEL_SECURITY_GUARD_CONCIERGE_CLEANER_JANITOR.name": "Personal de la casa (guardia, conserje, limpieza)",
+  "ticket.problem.classifier.PER_CC_EMPLOYEE.name": "Al empleado de atención al cliente",
+  "ticket.problem.classifier.QUALITY_IMPROVEMENT_PROPOSAL.name": "Propuesta de mejora de los servicios",
+  "ticket.problem.classifier.FREEZING.name": "Congelación",
+  "ticket.problem.classifier.SEAM_BALCONY_WINDOW_ROOF_LEAKAGE.name": "Fuga de balcón/ventana/techo",
+  "ticket.place.classifier.IT_SERVICES.name": "Servicios informáticos",
+  "ticket.place.classifier.SECURITY.name": "Seguridad",
+  "ticket.place.classifier.COURTYARD.name": "Patio",
+  "ticket.place.classifier.APARTMENT.name": "Apartamento",
+  "ticket.place.classifier.RECEIPT.name": "Recibo",
+  "ticket.place.classifier.PARKING.name": "Aparcamiento",
+  "ticket.place.classifier.ENTRANCEWAY.name": "Portal",
+  "ticket.place.classifier.PAVEMENTS_ROADS_LAWNS.name": "Pavimentos, carreteras, céspedes",
+  "ticket.place.classifier.DOCUMENTS.name": "Documentos",
+  "ticket.place.classifier.FACADES.name": "Fachadas",
+  "ticket.place.classifier.ATTICS_BASEMENTS.name": "Aticos, sótanos",
+  "ticket.place.classifier.ROOFING.name": "Tejados",
+  "ticket.place.classifier.NON_RESIDENTIAL_PREMISES.name": "Local no residencial",
+  "ticket.place.classifier.FEEDBACK_ON_WORK.name": "Reseña sobre el trabajo",
+  "ticket.problem.classifier.ORDER_RECEIPT_CHANGE.name": "Pedido/Recepción/Modificación",
+  "ticket.problem.classifier.RESIDENT_AFFECTED.name": "Un propietario fue afectado",
+  "ticket.problem.classifier.PROPERTY_DAMAGED.name": "Propiedad afectada",
+  "ticket.problem.classifier.PROJECTS_TECHNICAL_SPECIFICATIONS.name": "Proyectos/Especificaciones técnicas",
+  "ticket.problem.classifier.GUTTER_STORM_DRAIN_DAMAGE.name": "Daños en el canalón/sistema de aguas pluviales",
+  "ticket.problem.classifier.SNOW_ICE_REMOVAL_ON_ROOF.name": "Retirada de nieve/hielo/carámbanos del tejado",
+  "ticket.problem.classifier.PARKING_SPOT_OCCUPIED.name": "Espacio ocupado, personas no autorizadas en el aparcamiento",
+  "ticket.problem.classifier.CURRENT_REPAIR.name": "Reparación actual",
+  "ticket.problem.classifier.REPAIR_MALFUNCTION.name": "Reparación/avería",
+  "ticket.problem.classifier.ELEVATOR_CABIN_ELEMENT_FAILURE.name": "Avería de elementos de cabina de ascensor",
+  "ticket.problem.classifier.NO_CONNECTION_WITH_DISPATCHER.name": "No hay comunicación con el despachador",
+  "ticket.problem.classifier.NO_LIGHTING.name": "No hay iluminación",
+  "ticket.problem.classifier.SHAKING_SCRAPING_NOISE.name": "Vibración/chirridos/ruido",
+  "ticket.problem.classifier.ITEMS_DROPPED_IN_ELEVATOR_SHAFT.name": "Se cayeron llaves/cosas por el hueco del ascensor",
+  "ticket.problem.classifier.CLOSE_SMOKE_EVACUATION_VALVE.name": "Cerrar la válvula de extracción de humo",
+  "ticket.problem.classifier.FIRE_HOSE_CABINETS_PRESENT.name": "Disponibilidad de mangueras, armarios, etc.",
+  "ticket.problem.classifier.FIRE_ALARM_TRIGGERED.name": "Se activó la alarma de incendios",
+  "ticket.problem.classifier.WALLS_CEILING_FLOOR_STRUCTURES.name": "Paredes, techo, suelo, forjados",
+  "ticket.problem.classifier.PEST_CONTROL_DISINFECTION.name": "Desratización, desinsectación, desinfección",
+  "ticket.problem.classifier.CRACKS_MASONRY_PLASTER_DAMAGE.name": "Grietas, desprendimiento de mampostería/yeso, daños en el pavimento/jambra",
+  "ticket.problem.classifier.SIGNAGE_ADVERTISING_EQUIPMENT_ON_FACADE.name": "Inscripción/publicidad/equipamiento en fachada",
+  "ticket.problem.classifier.REPAIR_IN_ROOM.name": "Reparación en el interior"
 }
