feat(condo): DOMA-10586 added lang

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -296,6 +296,13 @@
   "accrualsAndPayments.payments.noPaymentsYet.title": "No payments yet",
   "accrualsAndPayments.payments.type.list": "List",
   "accrualsAndPayments.payments.type.registry": "Registries",
+  "accrualsAndPayments.payments.type.registry.registryNumber": "№ of registry",
+  "accrualsAndPayments.payments.type.registry.paymentOrder": "Payment order",
+  "accrualsAndPayments.payments.type.registry.registryName": "Registry name",
+  "accrualsAndPayments.payments.type.registry.amount": "Amount of payments",
+  "accrualsAndPayments.payments.type.registry.uploadedRecords": "Number of entries",
+  "accrualsAndPayments.payments.type.registry.status.ACCEPTED": "New",
+  "accrualsAndPayments.payments.type.registry.status.PROCESSED": "Downloaded",
   "accrualsAndPayments.setup.chooseBillingStep.title": "Selecting a billing",
   "accrualsAndPayments.setup.noReturn": "At this point it is impossible to go back to this step",
   "accrualsAndPayments.setup.setupAcquiringStep.title": "Acceptance of the offer",
