--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -295,6 +295,13 @@
   "accrualsAndPayments.payments.noPaymentsYet.message": "Жители не оплатили ни одной квитанции. Как только это случится, информация о транзакциях появится здесь.",
   "accrualsAndPayments.payments.type.list": "Список",
   "accrualsAndPayments.payments.type.registry": "Реестры",
+  "accrualsAndPayments.payments.type.registry.registryNumber": "№ реестра",
+  "accrualsAndPayments.payments.type.registry.paymentOrder": "Номер п/п",
+  "accrualsAndPayments.payments.type.registry.registryName": "Имя файла",
+  "accrualsAndPayments.payments.type.registry.amount": "Сумма платежей",
+  "accrualsAndPayments.payments.type.registry.uploadedRecords": "Кол-во записей",
+  "accrualsAndPayments.payments.type.registry.status.ACCEPTED": "Новый",
+  "accrualsAndPayments.payments.type.registry.status.PROCESSED": "Вы скачали",
   "accrualsAndPayments.payments.noPaymentsYet.title": "Оплат пока нет",
   "accrualsAndPayments.setup.chooseBillingStep.title": "Выбор биллинга",
   "accrualsAndPayments.setup.noReturn": "На данном этапе вернуться к этому шагу невозможно",
