--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -296,6 +296,13 @@
   "accrualsAndPayments.payments.noPaymentsYet.title": "Todavía no hay pagos",
   "accrualsAndPayments.payments.type.list": "Lista",
   "accrualsAndPayments.payments.type.registry": "Registros",
+  "accrualsAndPayments.payments.type.registry.registryNumber": "№ de registro",
+  "accrualsAndPayments.payments.type.registry.paymentOrder": "Orden de pago",
+  "accrualsAndPayments.payments.type.registry.registryName": "Nombre de registro",
+  "accrualsAndPayments.payments.type.registry.amount": "Importe de los pagos",
+  "accrualsAndPayments.payments.type.registry.uploadedRecords": "Número de entradas",
+  "accrualsAndPayments.payments.type.registry.status.ACCEPTED": "Nuevo",
+  "accrualsAndPayments.payments.type.registry.status.PROCESSED": "Has descargado",
   "accrualsAndPayments.setup.chooseBillingStep.title": "Elegir facturación",
   "accrualsAndPayments.setup.noReturn": "No es posible volver a este paso en este momento",
   "accrualsAndPayments.setup.setupAcquiringStep.title": "Aceptación de oferta",
