feat(condo): DOMA-11185 notifications sound switch (#5906)
* feat(condo): DOMA-11185 added sound switch

* chore(condo): DOMA-11185 remove featureflag

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1466,6 +1466,9 @@
   "notification.UserMessagesSettingModal.messageType.TICKET_COMMENT_CREATED.label": "О новых комментариях",
   "notification.UserMessagesSettingModal.messageType.TICKET_CREATED.label": "О новых заявках",
   "notification.UserMessagesSettingModal.title": "Какие уведомления показывать?",
+  "notification.UserMessagesSettingModal.sound": "Звук",
+  "notification.UserMessagesSettingModal.sound.tooltip.enabled": "Сейчас уведомления приходят со звуком",
+  "notification.UserMessagesSettingModal.sound.tooltip.disabled": "Сейчас уведомления приходят без звука",
   "notification.messages.B2B_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.subject": "Открытие расчетного счета на дом",
