feat(condo): DOMA-9722 updated pages

--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1632,12 +1632,14 @@
   "pages.auth.register.field.Name": "Nombre completo",
   "pages.auth.register.field.Password": "Crea una contraseña",
   "pages.auth.register.field.Phone": "Número de teléfono",
-  "pages.auth.register.info.ConsentContent": "el consentimiento para procesar datos personales",
-  "pages.auth.register.info.PersonalDataProcessingConsent": "Al hacer clic en el botón ¨Registrarse¨ acepta {termsOfUse}, {privacyPolicyLink} y da {consentLink}",
-  "pages.auth.register.info.PrivacyPolicyContent": "los términos de la política de privacidad",
+  "page.auth.register.inputPhone.submit": "Continuar",
+  "common.consentToReceiveMarketingMaterials": "Acepto recibir materiales sobre gestión del hogar, descuentos y novedades de la plataforma Domá",
+  "pages.auth.register.info.dataProcessingContent": "el procesamiento de datos",
+  "pages.auth.register.info.PersonalDataProcessingConsent": "Al continuar con la sesión, aceptas {termsOfUse}, {privacyPolicyLink} y {consentLink}",
+  "pages.auth.register.info.PrivacyPolicyContent": "la política de privacidad",
   "pages.auth.register.info.RecaptchaPrivacyPolicyContent": "Este sitio está protegido mediante reCAPTCHA y está sujeto a la {PrivacyPolicy} y a los {TermsOfService} de Google",
   "pages.auth.register.info.termsOfService": "servicio",
-  "pages.auth.register.info.termsOfUseContent": "acuerdo de usuario",
+  "pages.auth.register.info.termsOfUseContent": "los términos de uso",
   "pages.auth.register.step.inputPhone.title": "Registración",
   "pages.auth.register.step.register.title": "Registro",
   "pages.auth.register.step.register.title.createPassword": "Crea una contraseña",
