--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1632,12 +1632,14 @@
   "pages.auth.register.field.Name": "ФИО",
   "pages.auth.register.field.Password": "Придумайте пароль",
   "pages.auth.register.field.Phone": "Телефон",
-  "pages.auth.register.info.ConsentContent": "согласие на обработку персональных данных",
-  "pages.auth.register.info.PersonalDataProcessingConsent": "Нажимая на кнопку «Зарегистрироваться», «Войти по СберБизнес ID» или «Войти», вы принимаете {termsOfUse}, {privacyPolicyLink} и даёте {consentLink}",
-  "pages.auth.register.info.PrivacyPolicyContent": "условия политики конфиденциальности",
+  "page.auth.register.inputPhone.submit": "Продолжить",
+  "common.consentToReceiveMarketingMaterials": "Согласен получать материалы об управлении домами, скидках и новостях платформы Домá",
+  "pages.auth.register.info.dataProcessingContent": "обработкой данных",
+  "pages.auth.register.info.PersonalDataProcessingConsent": "Продолжая авторизацию, вы соглашаетесь с {termsOfUse}, {privacyPolicyLink} и {consentLink}",
+  "pages.auth.register.info.PrivacyPolicyContent": "политикой конфиденциальности",
   "pages.auth.register.info.RecaptchaPrivacyPolicyContent": "Этот сайт под защитой системы reCAPTCHA и к нему применяются {PrivacyPolicy} и {TermsOfService} Google",
   "pages.auth.register.info.termsOfService": "обслуживания",
-  "pages.auth.register.info.termsOfUseContent": "пользовательское соглашение",
+  "pages.auth.register.info.termsOfUseContent": "условиями использования",
   "pages.auth.register.step.inputPhone.title": "Зарегистрироваться",
   "pages.auth.register.step.register.title": "Регистрация",
   "pages.auth.register.step.register.title.createPassword": "Придумайте пароль",
