--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1632,12 +1632,14 @@
   "pages.auth.register.field.Name": "Name",
   "pages.auth.register.field.Password": "Type new password",
   "pages.auth.register.field.Phone": "Phone",
-  "pages.auth.register.info.ConsentContent": "consent",
-  "pages.auth.register.info.PersonalDataProcessingConsent": "I give my {consentLink} to the Doma LLC for processing of my personal data and accept with {termsOfUse}. {privacyPolicyLink}",
-  "pages.auth.register.info.PrivacyPolicyContent": "Privacy policy",
+  "page.auth.register.inputPhone.submit": "Continue",
+  "common.consentToReceiveMarketingMaterials": "I agree to receive materials about home management, discounts and news from the Domá platform",
+  "pages.auth.register.info.dataProcessingContent": "data processing",
+  "pages.auth.register.info.PersonalDataProcessingConsent": "By continuing to log in, you agree to {termsOfUse}, {privacyPolicyLink} and {consentLink}",
+  "pages.auth.register.info.PrivacyPolicyContent": "privacy policy",
   "pages.auth.register.info.RecaptchaPrivacyPolicyContent": "This site is protected by reCAPTCHA and the Google {PrivacyPolicy} and {TermsOfService} apply.",
   "pages.auth.register.info.termsOfService": "Terms of Service",
-  "pages.auth.register.info.termsOfUseContent": "Terms of use",
+  "pages.auth.register.info.termsOfUseContent": "the terms of use",
   "pages.auth.register.step.inputPhone.title": "Registration",
   "pages.auth.register.step.register.title": "Registration",
   "pages.auth.register.step.register.title.createPassword": "Create a password",
