feat(condo): DOMA-9722 added hint for password

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1628,9 +1628,9 @@
   "pages.auth.register.RestartPhoneConfirmLabel": "Retry",
   "pages.auth.register.error.smstimeout": "The next SMS can be sent in {timeRemain} s",
   "pages.auth.register.fail": "Failed to complete registration. Please try again",
-  "pages.auth.register.field.Email": "Email",
+  "pages.auth.register.field.Email": "E-mail",
   "pages.auth.register.field.Name": "Name",
-  "pages.auth.register.field.Password": "Type new password",
+  "pages.auth.register.field.Password": "Password",
   "pages.auth.register.field.Phone": "Phone",
   "page.auth.register.inputPhone.submit": "Continue",
   "common.consentToReceiveMarketingMaterials": "I agree to receive materials about home management, discounts and news from the Domá platform",
