--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1628,9 +1628,9 @@
   "pages.auth.register.RestartPhoneConfirmLabel": "Volver a empezar",
   "pages.auth.register.error.smstimeout": "El próximo mensaje SMS se puede enviar en {timeRemain} de",
   "pages.auth.register.fail": "No se pudo completar el registro. Por favor, inténtelo de nuevo.",
-  "pages.auth.register.field.Email": "Correo electrónico",
+  "pages.auth.register.field.Email": "E-mail",
   "pages.auth.register.field.Name": "Nombre completo",
-  "pages.auth.register.field.Password": "Crea una contraseña",
+  "pages.auth.register.field.Password": "Contraseña",
   "pages.auth.register.field.Phone": "Número de teléfono",
   "page.auth.register.inputPhone.submit": "Continuar",
   "common.consentToReceiveMarketingMaterials": "Acepto recibir materiales sobre gestión del hogar, descuentos y novedades de la plataforma Domá",
