--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1628,9 +1628,9 @@
   "pages.auth.register.RestartPhoneConfirmLabel": "Начать сначала",
   "pages.auth.register.error.smstimeout": "Следующее СМС сообщение может быть отправлено через {timeRemain} с",
   "pages.auth.register.fail": "Не удалось завершить регистрацию. Попробуйте еще раз",
-  "pages.auth.register.field.Email": "Эл. почта",
+  "pages.auth.register.field.Email": "E-mail",
   "pages.auth.register.field.Name": "ФИО",
-  "pages.auth.register.field.Password": "Придумайте пароль",
+  "pages.auth.register.field.Password": "Пароль",
   "pages.auth.register.field.Phone": "Телефон",
   "page.auth.register.inputPhone.submit": "Продолжить",
   "common.consentToReceiveMarketingMaterials": "Согласен получать материалы об управлении домами, скидках и новостях платформы Домá",
